# Advent-of-Code-Runner

./: .env  .env.leave  .envrc  .gitignore  .python-version  pyproject.toml
data/home/: home.html  home.pickle
data/settings/: expire.html  expire.pickle  github.html  github.pickle  google.html  google.pickle
src/aoc_runner/: __init__.py  config.py  exceptions.py  httpclient.py  puzzle.py  user.py  utils.py
tests/: conftest.py
tests/config/: conftest.py  test_config.py
tests/data/user/: settings_53616c7465645f5f168e2a3588960815d03e3b36461ae4d80d2d4918cbdcba3b9a08a1becf6134815911e83eb748e180ff28aa7abd71e5e28ec15a601603e03b.pickle  settings_53616c7465645f5f6a517bc02d328a3ecfc5bf02ef49ea4e8a981cfd9bb9f6e51ddbaa6601ce7b79c8ee3405d77dad4016f17640ef249adbb78045b2c6e645e7.pickle
tests/user/: cache_settings.py  conftest.py  test_new.py  test_user.py  test_user_info.py  test_user_list.py
tests/user/data/: settings_53616c7465645f5f9ae2b7d2af32fc2e3862adb2f08e5a4dc66b594dd1ad760543ad850fd3692a496e07e3993106607dce2a5bfa13aa311d419223b4fd12e564.pickle
tests/utils/: conftest.py  test_color.py  test_colored.py  test_ensure_path_exists.py  test_get_soup.py
utils/: aoc_server.py  aoc_settings_page.py
