[tool.poetry]
name = "advent-of-code-runner"
version = "0.0.1"
description = "Advent of Code Runner project"
authors = ["David Rotthoff <drotthoff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
